infra/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: root-pod
spec:
  containers:
    - name: root-container
      image: busybox
      command: ["sleep", "3600"]
